# quelware

./: .gitignore  .gitmodules  README.md  test.md
e7awghal/: .gitignore  DEVELOPERS.md  Makefile  README.md  pyproject.toml  quel_ic_config  quel_ic_config_utils  run_tests.sh  static_check.sh
e7awghal/scripts/: au50loop_classification_examples.py  au50loop_scan_mapping.py  au50loop_wave_examples.py  awgctrl_example.py  bombardment_of_broken_packet.py  bombardment_on_wrong_port.py  capture_example.py  cmctrl_example.py  fir_demodulation_example.py  fir_example.py  mutex_test.py  rebooter_example.py  simplemulti_loopback_example.py  wavegen_example.py
e7awghal/testlibs/: awgctrl_with_hlapi.py  capunit_with_hlapi.py  quel1au50_hal_for_test.py
quel_clock_master/: .gitignore  README.md  pyproject.toml  setup.cfg  static_check.sh  unittest.sh
quel_clock_master/consoleapps/: apps.py
quel_clock_master/quel_clock_master/: __init__.py  qubemasterclient.py  sequencerclient.py  simpleudpclient.py
quel_clock_master/quel_clock_master_consoleapps/: apps.py
quel_clock_master/tests/: test_bogus_packet.py
quel_clock_master/tests_with_devices/: test_clock.py
quel_cmod_scripting/: .gitignore  README.md  setup.cfg  static_check.sh  unittest.sh
quel_cmod_scripting/quel_cmod_consoleapps/: upd_temp.py
quel_cmod_scripting/quel_cmod_scripting/: __init__.py  quel1_cmod.py  quel_cmod_abstract.py
quel_cmod_scripting/scripts/: common_args.py  uart_monitor_console.py
quel_cmod_scripting/tests_with_devices/: test_basic.py
quel_ic_config/: .gitignore  ATTRIBUTION.txt  BASIC_BOX_TEST.md  CHANGELOG  DESIGN_FOR_ABSTRACTING_DIFFERENT_FIRMWARES.md  DEVELOPER.md  DEVELOPERS.md  DEVELOPMENT_NOTES.md  GETTING_STARTED.md  HOW_TO_USE_EXAMPLES.md  MANIFEST.in  MIGRATION_TO_0_8_X.md  Makefile  NOTICE  README.md  UPDATE.md  download_prebuilt.sh  e7awghal  pyproject.toml  quel_clock_master  quel_inst_tool  quel_pyxsdb  runtest.sh  runtest_std.sh  setup.cfg  setup.py  static_check.sh  unittest.sh
quel_ic_config/adi_ad9081_v106/: __init__.pyi  ad9081_wrapper.cpp  adi_ad9081.h  adi_ad9081_adc.c  adi_ad9081_device.c  adi_ad9081_hal.c  adi_ad9081_jesd.c
quel_ic_config/adi_ad9082_v161/: CMakeLists.txt  ad9082_wrapper.cpp
quel_ic_config/adi_ad9082_v170/: CMakeLists.txt  ad9082_wrapper.cpp
quel_ic_config/dependency_pkgs/: e7awgsw-1.0.0-py3-none-any.whl  quel_clock_master-0.1.3-py3-none-any.whl
quel_ic_config/docs/: BOX_EXCLUSIVE_ACCESS_CONTROL.md  DESIGN_FOR_ABSTRACTING_DIFFERENT_FIRMWARES.md  DEVELOPMENT_NOTES.md  GETTING_STARTED.md  HOW_TO_USE_EXAMPLES.md  IMPORTING_IPYTHON_MODULE.md  MIGRATION_TO_0_10_X.md  MIGRATION_TO_0_8_X.md  SYSTEM_CONFIGURATION.md  WAVE_STABILITY_CHECK.md
quel_ic_config/examples/: skew_compensation.py  sysconf.yaml
quel_ic_config/helpers/: detect_e7awgsw_branch.sh  detect_firmware_type.sh  powercycle_quel_ci_env.sh  quel_ci_env.yaml  quel_ci_env_extended.yaml  quel_ci_env_quel1only.yaml  quel_ci_env_quel1only_v1.yaml  quel_ci_env_quel1se-only.yaml  quel_ci_env_quel1se-riken8-only.yaml  quel_ci_env_v2.yaml  reboot_au50.sh  reboot_au50_with_arbitrary_firmware_parallel.sh  reboot_au50_with_development_firmware.sh  reboot_au50_with_feedback_firmware.sh  reboot_au50_with_feedback_veryearly_firmware.sh  rebuilt_v106.sh  rebuilt_v161.sh  rebuilt_v170.sh  update_au50_firmware_to_the_latest.sh  update_au50_firmware_to_the_latest_quel1se.sh  update_au50_with_arbitrary_firmware_parallel.sh
quel_ic_config/quel_ic_config/: __init__.py  abstract_ic.py  ad5328.py  ad9082_v106.py  adrf6780.py  e7resource_mapper.py  e7workaround.py  exstickge_coap_client.py  exstickge_coap_tempctrl_client.py  exstickge_proxy.py  exstickge_sock_client.py  generic_gpio.py  linkupper.py  lmx2594.py  mixerboard_gpio.py  pathselectorboard_gpio.py  powerboard_pwm.py  quel1_anytype.py  quel1_box.py  quel1_box_intrinsic.py  quel1_box_with_raw_wss.py  quel1_config_objects.py  quel1_config_subsystem.py  quel1_config_subsystem_common.py  quel1_config_subsystem_tempctrl.py  quel1_wave_subsystem.py  quel1se_adda_config_subsystem.py  quel1se_proto11_config_subsystem.py  quel1se_proto8_config_subsystem.py  quel1se_proto_adda_config_subsystem.py  quel1se_riken8_config_subsystem.py  quel_config_common.py  quel_ic.py  rfswitcharray.py  thermistor.py
quel_ic_config/quel_ic_config_cli/: cli.py  parallel_linkup.py  phase_measurement.py
quel_ic_config/quel_ic_config_utils/: __init__.py  common_arguments.py  e7resource_mapper.py  e7workaround.py  linkupper.py  quel1_wave_subsystem.py  simple_box.py
quel_ic_config/scripts/: adda_mixer11_up.py  adda_mixer8_up.py  adda_up.py  basic_box_test.py  getting_started_example.py  looptest_basic.py  looptest_scheduled.py  looptest_scheduled_multibox.py  looptest_triggered.py  manual_test_console_prebox.py  phase_graph.py  pulse_capture.py  quel1_check_all_internal_loopbacks.py  quel1_monitor_synchronized_output.py  quel1_monitor_synchronized_output_advanced.py  quel1se_check_all_internal_loopbacks.py  quel1se_riken8_check_all_internal_loopbacks.py  simple_scheduled_loopback.py  simple_timed_loopback_example_quel1se_riken8.py  simple_triggered_loopback.py  simple_triggered_multiple_loopbacks.py  simple_triggered_syncronized_multiple_loopbacks.py  skew_scan.py  threebox_phase_measure.py  twobox_scheduled_loopback.py
quel_ic_config/settings/: quel-1.json
quel_ic_config/testlibs/: awgctrl_with_hlapi.py  basic_scan_common.py  capunit_with_hlapi.py  common_arguments.py  create_css_proxy.py  e440xb_helper.py  easy_capture.py  easy_wave.py  gen_cw.py  gencap_quel1_utils.py  gencap_utils.py  general_looptest_common.py  general_looptest_common_updated.py  init_helper_for_prebox.py  register_cw.py  (+6 more)
quel_inst_tool/: .gitignore  DEVELOP.md  E4405b.env  E4407b.env  MS2720T.ipynb  README.md  SynthHD_MS2720T.ipynb  pyproject.toml  setup.cfg  static_check.sh  unittest.sh
quel_pyxsdb/: DETAILS.md  README.md  pyproject.toml  setup.cfg  static_check.sh
quel_staging_tool/: .gitignore  DEVELOPMENT.md  MANIFEST.in  README.md  pyproject.toml  runtest.sh  setup.cfg  static_check.sh  unittest.sh
(+524 files in other folders)
