[project]
name = "e7awghal"
version = "0.1.4"
requires-python = ">=3.9"
dependencies = [
    "numpy ~= 1.26.0",
    "scipy ~= 1.13.1",
    "pydantic ~= 2.4.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
    "matplotlib",
    "pycairo",
    "PyGObject",
    "quel_ic_config",
    "ruff>=0.11.13",
]

[tool.setuptools]
packages = ["e7awghal"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
e7awghal = ["py.typed"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.mypy]
python_version = 3.9
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "matplotlib.*,aiocoap.*,ping3,ulid,e7awgsw.*,quel_clock_master.*,scipy.*"
ignore_missing_imports = true

[tool.uv.sources]
quel_ic_config = { path = "../quel_ic_config", editable = true }

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
ignore = ["E203", "W605", "E731", "E741"]
