[metadata]
name = quel_clock_master
version = 0.1.1
description = a library for configuring ICs in QuEL-1

[options]
zip_safe = False
include_package_data = True
packages =
    quel_clock_master
    consoleapps

install_requires =


[options.package_data]
quel_ic_config =
    py.typed
    *.pyi

[options.extras_require]
dev =
    black
    isort
    mypy
    pyproject-flake8
    pytest

[options.entry_points]
console_scripts =
    quel_clock_master_reset=consoleapps.apps:reset_main
    quel_clock_master_readm=consoleapps.apps:read_master_main
    quel_clock_master_clear=consoleapps.apps:clear_main
    quel_clock_master_kick=consoleapps.apps:kick_main
    quel_clock_master_readt=consoleapps.apps:read_target_main
    quel_clock_master_read=consoleapps.apps:read_main
