[metadata]
name = quel_clock_master
version = attr:quel_clock_master.__version__
description = a library for configuring ICs in QuEL-1

[options]
zip_safe = False
include_package_data = True
packages =
    quel_clock_master
    quel_clock_master_consoleapps

install_requires =


[options.package_data]
quel_ic_config =
    py.typed
    *.pyi

[options.extras_require]
dev =
    black
    isort
    mypy
    pyproject-flake8
    pytest

[options.entry_points]
console_scripts =
    quel_clock_master_resetm=quel_clock_master_consoleapps.apps:reset_master_main
    quel_clock_master_resett=quel_clock_master_consoleapps.apps:reset_target_main
    quel_clock_master_readm=quel_clock_master_consoleapps.apps:read_master_main
    quel_clock_master_readt=quel_clock_master_consoleapps.apps:read_target_main
    quel_clock_master_clear=quel_clock_master_consoleapps.apps:clear_main
    quel_clock_master_kick=quel_clock_master_consoleapps.apps:kick_main
    quel_clock_master_read=quel_clock_master_consoleapps.apps:read_main
