[metadata]
name = quel_cmod_scripting
version = attr:quel_cmod_scripting.__version__
description = a library for scripting uart command interface of cmod in QuEL-1

[options]
zip_safe = False
include_package_data = True
packages =
    quel_cmod_scripting
    quel_cmod_consoleapps
install_requires =
    requests >= 2.28.2
    numpy ~= 1.26.0
    packaging >= 23.2
    quel_pyxsdb >= 0.2.0

[options.package_data]
quel_cmod_scripting =
    py.typed

[options.extras_require]
dev =
    black
    isort
    mypy
    pyproject-flake8
    pytest
    types-requests
    types-PyYAML

[options.entry_points]
console_scripts =
    show_th = quel_cmod_consoleapps.upd_temp:show_th
    show_pl = quel_cmod_consoleapps.upd_temp:show_pl
    show_fan = quel_cmod_consoleapps.upd_temp:show_fan
    show_switches = quel_cmod_consoleapps.upd_temp:show_switches
    set_switch = quel_cmod_consoleapps.upd_temp:set_switch
    set_all_switches = quel_cmod_consoleapps.upd_temp:set_all_switches
    check_th_pl = quel_cmod_consoleapps.upd_temp:check
    stop_tmp_control = quel_cmod_consoleapps.upd_temp:stop_tmp_control
    restart_tmp_control = quel_cmod_consoleapps.upd_temp:restart_tmp_control
