[project]
name = "quel_ic_config"
version = "0.10.4"
authors = [
    {name = "quelware Authors", email = "opensource@quel-inc.com"},
]
description = "A host-side software intended for QuEL control devices"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file = "LICENSE"}
dependencies = [
    "packaging >= 23.2",
    "numpy ~= 1.26.0",
    "pydantic ~= 2.4",
    "pyyaml ~= 6.0.1",
    "aiocoap ~= 0.4.7",
    "python-ulid ~= 2.7.0",
    "flufl.lock ~= 8.1.0",
    "e7awghal > 0.1.3",
    "pybind11-stubgen ~= 2.5.1",
    "pandas ~= 2.2.3",
    "polars ~= 1.9.0",
    "matplotlib",
    "typer>=0.16.1",
]

[project.urls]
Repository = "https://github.com/quel-inc/quelware"

[project.scripts]
quel1_linkup = "quel_ic_config_cli.cli:quel1_linkup"
quel1_linkstatus = "quel_ic_config_cli.cli:quel1_linkstatus"
quel1_parallel_linkup = "quel_ic_config_cli.parallel_linkup:parallel_linkup_main"
quel1_syncstatus = "quel_ic_config_cli.parallel_linkup:syncstatus_main"
quel1_sync = "quel_ic_config_cli.parallel_linkup:sync_main"
quel1_test_linkup = "quel_ic_config_cli.cli:quel1_test_linkup"
quel1_dump_port_config = "quel_ic_config_cli.cli:quel1_dump_port_config"
quel1_firmware_version = "quel_ic_config_cli.cli:quel1_firmware_version"
quel1se_tempctrl_state = "quel_ic_config_cli.cli:quel1se_tempctrl_state"
quel1se_tempctrl_reset = "quel_ic_config_cli.cli:quel1se_tempctrl_reset"
quel1se_riken8_check_all_internal_loopbacks = "quel_ic_config_cli.quel1se_check_all_internal_loopbacks:main"
quel1_check_all_internal_loopbacks = "quel_ic_config_cli.quel1_check_all_internal_loopbacks:main"
quel1_stability_check = "quel_ic_config_cli.quel1_stability_check:cli_main"
quel1_stability_viewer = "quel_ic_config_cli.quel1_stability_viewer:cli_main"
quel_filelock_manager = "quel_ic_config_cli.filelock_manager:main"

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "types-PyYAML",
    "pytest",
    "pytest-cov",
    "pybind11 ~= 2.13.6",
    "pandas-stubs",
    "quel_cmod_scripting >= 0.1.8",
    "quel_staging_tool >= 0.0.8",
    "quel_pyxsdb >= 0.2.0",
    "ruff>=0.11.13",
]

[build-system]
requires = [
    "setuptools >= 43.0.0",
    "pybind11 ~= 2.13.6"
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"quel_ic_config.settings" = ["*.json", "quel-1/*.json", "quel-1se/*.json"]
"quel_ic_config_cli.settings" = ["*.json"]
adi_ad9082_v170 = ["*.pyi", "py.typed", "LICENSES.pdf"]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.mypy]
python_version = 3.9
mypy_path = [
    "../quel_cmod_scripting",
    "../quel_pyxsdb",
]
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "matplotlib.*,aiocoap.*,ulid,scipy.*"
ignore_missing_imports = true

[tool.uv.sources]
e7awghal = { path = "../e7awghal", editable = true }
quel_cmod_scripting = { path = "../quel_cmod_scripting", editable = true }
quel_staging_tool = { path = "../quel_staging_tool", editable = true }
quel_pyxsdb = { path = "../quel_pyxsdb", editable = true }

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
ignore = ["E203", "W605", "E731", "E741"]

[tool.tox]
env_list = ["3.9", "3.10", "3.11", "3.12"]
requires = ["tox>=4.0", "tox-uv"]

[tool.tox.env_run_base]
isolated_build = true
allowlist_externals = ["bash"]
deps = [
    ".[dev]"
]
commands = [["bash", "./runtest_std.sh"]]
set_env = { TOX_ENV_NAME = "{envname}" }
