[metadata]
name = quel_ic_config
version = attr:quel_ic_config.__version__
description = a library for configuring ICs in QuEL-1

[options]
zip_safe = False
include_package_data = True
packages =
    quel_ic_config

install_requires =
    pyyaml
    pydantic ~= 1.10.0
    numpy ~= 1.24.0

[options.package_data]
quel_ic_config =
    py.typed
    *.pyi

[options.extras_require]
dev =
    setuptools
    wheel
    black
    isort
    mypy
    pyproject-flake8
    pybind11
    pybind11-stubgen
    pytest
    pytest-cov
    matplotlib

[options.entry_points]
console_scripts =
