[metadata]
name = quel_ic_config
version = attr:quel_ic_config.__version__
description = a library for configuring ICs in QuEL-1

[options]
zip_safe = False
include_package_data = True
packages =
    quel_ic_config
    quel_ic_config.settings
    quel_ic_config_utils
    quel_ic_config_cli
    adi_ad9081_v106

install_requires =
    pyyaml ~= 6.0.1
    pydantic ~= 2.4.0
    numpy ~= 1.26.0
    aiocoap ~= 0.4.7
    e7awgsw ~= 1.0.0
    quel_clock_master >= 0.1.3
    ping3 ~= 4.0.4
    packaging >= 23.2

[options.package_data]
quel_ic_config =
    py.typed
    *.pyi
quel_ic_config.settings =
    *
adi_ad9081_v106 =
    *.h
    py.typed
    *.pyi

[options.extras_require]
dev =
    black
    isort
    mypy
    pyproject-flake8
    pybind11
    pybind11-stubgen
    pytest
    pytest-cov
    matplotlib
    quel_inst_tool >= 0.2.6
    quel_cmod_scripting >= 0.1.5
    quel_staging_tool >= 0.0.8
    quel_pyxsdb >= 0.2.0

[options.entry_points]
console_scripts =
    quel1_linkup = quel_ic_config_cli.cli:quel1_linkup
    quel1_linkstatus = quel_ic_config_cli.cli:quel1_linkstatus
    quel1_test_linkup = quel_ic_config_cli.cli:quel1_test_linkup
    quel1_dump_port_config = quel_ic_config_cli.cli:quel1_dump_port_config
    quel1_firmware_version = quel_ic_config_cli.cli:quel1_firmware_version
    quel1se_tempctrl_state = quel_ic_config_cli.cli:quel1se_tempctrl_state
    quel1se_tempctrl_reset = quel_ic_config_cli.cli:quel1se_tempctrl_reset
    quel1_phase_log = quel_ic_config_cli.phase_measurement:cli_main
    e7awg_dump = quel_ic_config_cli.e7awg_dump:main
