[metadata]
name = quel_inst_tool
version = 0.0.7
description = a wrapper library for instrumentation tools we have at QuEL offices

[options]
zip_safe = False
include_package_data = True
packages =
    quel_inst_tool
    quel_inst_tool_consoleapps

install_requires =
    pyvisa >= 1.13.0
    numpy >= 1.21.0
    matplotlib >= 3.6.0
    PyQt5 >= 5.15.0
    fastapi

[options.package_data]
quel_inst_tool =
    py.typed

[options.extras_require]
dev =
    setuptools
    wheel
    black
    isort
    mypy
    pyproject-flake8
    pytest
    pytest-cov
    uvicorn

[options.entry_points]
console_scripts =
    e4405b_cli = quel_inst_tool_consoleapps.e4405b_cli:main
