[metadata]
name = quel_inst_tool
version = attr:quel_inst_tool.__version__
description = a wrapper library for instrumentation tools we have at QuEL offices

[options]
zip_safe = False
include_package_data = True
packages =
    quel_inst_tool
    quel_inst_tool_consoleapps

install_requires =
    pyvisa >= 1.13.0
    pyvisa_py ~= 0.7.0
    numpy ~= 1.24.4
    matplotlib >= 3.6.0
    PyQt5 >= 5.15.0
    fastapi ~= 0.98.0
    pydantic ~= 1.10.11
    zeroconf ~= 0.74.0
    psutil ~= 5.9.5
    windfreak ~= 0.3.0

[options.package_data]
quel_inst_tool =
    py.typed

[options.extras_require]
dev =
    setuptools
    wheel
    black
    isort
    mypy
    pyproject-flake8
    pytest
    pytest-cov
    python-dotenv
    httpx

[options.entry_points]
console_scripts =
    e4405b_cli = quel_inst_tool_consoleapps.e440xb_cli:main
