[metadata]
name = quel_inst_tool
version = attr:quel_inst_tool.__version__
description = a wrapper library for instrumentation tools we have at QuEL offices

[options]
zip_safe = False
include_package_data = True
packages =
    quel_inst_tool
    quel_inst_tool_consoleapps

install_requires =
    pyvisa >= 1.13.0
    pyvisa_py ~= 0.7.0
    numpy ~= 1.26.0
    matplotlib >= 3.6.0
    pycairo
    PyGObject
    fastapi ~= 0.104.0
    pydantic ~= 2.4.0
    zeroconf
    psutil
    windfreak ~= 0.3.0

[options.package_data]
quel_inst_tool =
    py.typed

[options.extras_require]
dev =
    setuptools
    wheel
    black
    isort
    mypy
    pyproject-flake8
    pytest
    pytest-cov
    python-dotenv
    httpx
    types-psutil

[options.entry_points]
console_scripts =
    e4405b_cli = quel_inst_tool_consoleapps.e440xb_cli:main
    pe_switch_check = quel_inst_tool_consoleapps.pe6108ava_cli:pe_switch_check
    pe_switch_control = quel_inst_tool_consoleapps.pe6108ava_cli:pe_switch_control
    pe_switch_powercycle = quel_inst_tool_consoleapps.pe6108ava_cli:pe_switch_powercycle
