[metadata]
name = quel_pyxsdb
version = attr:quel_pyxsdb.__version__
description = tools for using xsdb from Python

[options]
zip_safe = False
packages =
    quel_pyxsdb

install_requires =

[options.package_data]
quel_pyxsdb =
    py.typed

[options.extras_require]
dev =
    black
    isort
    mypy
    pyproject-flake8

[options.entry_points]
console_scripts =
    quel_xsdb_server = quel_pyxsdb.xsct:main_server
    quel_xsdb_jtaglist = quel_pyxsdb.xsct:main_jtaglist
    quel_xsdb_jtagterminal = quel_pyxsdb.xsct:main_jtagterminal
    quel_hw_server = quel_pyxsdb.hw_server:main_hw_server
