[metadata]
name = quel_staging_tool
version = attr:quel_staging_tool.__version__
description = delivering QuEL-1 firmwares as a Python package

[options]
zip_safe = False
include_package_data = True
packages =
    quel_staging_tool
    quel_staging_tool_consoleapps

install_requires =

[options.package_data]
quel_staging_tool =
    py.typed
quel_staging_tool/plain_bits =
    *
quel_staging_tool/tcl_2020 =
    *.tcl

[options.extras_require]
dev =
    setuptools
    wheel
    black
    isort
    mypy
    pyproject-flake8
    pytest
    pytest-cov
    ping3

[options.entry_points]
console_scripts =
    quel_program_exstickge=quel_staging_tool_consoleapps.cli:program_exstickge
    quel_program_au50=quel_staging_tool_consoleapps.cli:program_au50
    quel_reboot_fpga=quel_staging_tool_consoleapps.cli:reboot_xil_fpga
