[metadata]
name = quel_staging_tool
version = attr:quel_staging_tool.__version__
description = delivering QuEL-1 firmwares as a Python package

[options]
zip_safe = False
include_package_data = True
packages =
    quel_staging_tool
    quel_staging_tool_consoleapps

install_requires =
    psutil

[options.package_data]
quel_staging_tool =
    py.typed
quel_staging_tool/plain_bits =
    *
quel_staging_tool/tcl_2020 =
    *.tcl

[options.extras_require]
dev =
    setuptools
    wheel
    black
    isort
    mypy
    pyproject-flake8
    pytest
    pytest-cov
    ping3
    types-psutil
    quel_ic_config

[options.entry_points]
console_scripts =
    quel_program_exstickge_1=quel_staging_tool_consoleapps.cli:program_exstickge_1
    quel_program_exstickge_1se=quel_staging_tool_consoleapps.cli:program_exstickge_1se
    quel_program_exstickge_clkdist=quel_staging_tool_consoleapps.cli:program_exstickge_clockdisty
    quel_program_au50=quel_staging_tool_consoleapps.cli:program_au50
    quel_program_au200=quel_staging_tool_consoleapps.cli:program_au200
    quel_reboot_fpga=quel_staging_tool_consoleapps.cli:reboot_xil_fpga
    quel_reboot_au50=quel_staging_tool_consoleapps.cli:reboot_xil_au50
    quel_reboot_au200=quel_staging_tool_consoleapps.cli:reboot_xil_au200
